--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-plotly.js": "^2.6.0",
+    "react-plotly.js-editor": "^0.10.2",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^4.0.0"
   },
