--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mantine/hooks": "^7.16.1",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "ethers": "^5.7.2",
+    "mapbox-gl": "^1.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-map-gl": "^7.1.8",
     "react-plotly.js": "^2.6.0",
     "react-plotly.js-editor": "^0.10.2",
     "react-router-dom": "^7.1.3",
