--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^7.16.1",
+    "@mantine/form": "^7.16.1",
     "@mantine/hooks": "^7.16.1",
+    "@mantine/notifications": "^7.16.1",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "ethers": "^5.7.2",
     "mapbox-gl": "^1.13.3",
+    "plotly.js": "^2.35.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
